--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,19 +5,18 @@
   "type": "module",
   "scripts": {
     "build": "remix vite:build",
+    "build-cf-types": "wrangler types",
     "deploy": "npm run build && wrangler pages deploy ./build/client",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "preview": "npm run build && wrangler pages dev ./build/client",
     "start": "wrangler pages dev ./build/client",
     "typecheck": "tsc",
-    "typegen": "wrangler types",
-    "preview": "npm run build && wrangler pages dev ./build/client",
-    "build-cf-types": "wrangler types"
+    "typegen": "wrangler types"
   },
   "dependencies": {
     "@portabletext/react": "^3.0.18",
     "@remix-run/cloudflare": "^2.8.1",
-    "@remix-run/cloudflare-pages": "^2.8.1",
     "@remix-run/react": "^2.8.1",
     "@sanity/client": "^6.15.13",
     "@sanity/image-url": "^1.0.2",
@@ -34,7 +33,6 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.368.0",
     "matter-js": "^0.19.0",
-    "miniflare": "^3.20231030.4",
     "pts": "^0.12.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -44,7 +42,6 @@
     "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240405.0",
     "@remix-run/dev": "^2.8.1",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
@@ -59,8 +56,7 @@
     "node-fetch": "^3.3.2",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.2.1",
-    "wrangler": "^3.24.0"
+    "vite-tsconfig-paths": "^4.2.1"
   },
   "engines": {
     "node": ">=18.0.0"
