--- a/studio/tsconfig.json
+++ b/studio/tsconfig.json
@@ -13,7 +13,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "noImplicitAny": false,
   },
   "includes": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "dist"]
