--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,10 @@
     "@sanity/react-loader": "^1.9.9",
     "@sanity/types": "^3.37.2",
     "@sanity/visual-editing": "^1.8.8",
+    "@types/animejs": "^3.1.12",
+    "@types/lodash": "^4.17.0",
+    "@types/mathjs": "^9.4.2",
+    "@types/p5": "^1.7.6",
     "animejs": "^3.2.2",
     "app": "^0.1.0",
     "autoprefixer": "^10.4.19",
@@ -32,7 +36,9 @@
     "jreinier": "link:/Users/jreinier",
     "lodash": "^4.17.21",
     "lucide-react": "^0.368.0",
+    "mathjs": "^12.4.1",
     "matter-js": "^0.19.0",
+    "p5": "^1.9.2",
     "pts": "^0.12.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
