--- a/studio/tsconfig.json
+++ b/studio/tsconfig.json
@@ -14,7 +14,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "noImplicitAny": false,
+    "noImplicitAny": false
   },
   "includes": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "dist"]
