--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,15 +5,13 @@
     "**/.server.ts",
     "**/.server.tsx",
     "**/.client.ts",
-    "**/.client.tsx"
+    "**/.client.tsx",
+    "../util/**/*.ts",
+    "../util/**/*.tsx"
   ],
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
-    "types": [
-      "@remix-run/cloudflare",
-      "vite/client",
-      "@cloudflare/workers-types/2023-07-01"
-    ],
+    "types": ["@remix-run/cloudflare", "vite/client"],
     "isolatedModules": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
@@ -28,7 +26,7 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./app/*"],
-      "@util/*": ["./util/*"]
+      "@util/*": ["../util/src/*"]
     },
 
     // Vite takes care of building everything, not tsc.
