--- a/studio/package.json
+++ b/studio/package.json
@@ -16,7 +16,8 @@
     "react-dom": "18.2.0",
     "rxjs": "7.8.1",
     "sanity": "3.37.2",
-    "styled-components": "6.1.8"
+    "styled-components": "6.1.8",
+    "vite-tsconfig-paths": "^4.2.1"
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "4.0.0",
